--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<title>Force Network with d3</title>
 		# <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+		<a href="community/index_0.html">Citation group 1</a>
+		<a href="community/index_1.html">Citation group 2</a>
+		<a href="community/index_2.html">Citation group 3</a>
 		<link rel="stylesheet" type="text/css" href="css/mystyle.css" />
 	</head>
 	<body>
