--- a/community/index_.html
+++ b/community/index_.html
@@ -10,6 +10,6 @@
     <link rel="stylesheet" type="text/css" href="css/mystyle_.css" />
   </head>
   <body>
-    <script src="js/mycode.js"></script>
+    <script src="js/mycode_.js"></script>
   </body>
 </html>
