--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<h1>Citation Network for Korean patents</h1>
 		<ol>
 			<li><a href="community/index_0.html">Citation group 1</a>
-			<li><a href="community/index_1.html">Citation group 2</a>
+			<li><a href="community/index_.html">Citation group 2</a>
 			<li><a href="community/index_2.html">Citation group 3</a>
 		</o1>
 		<script src="js/mycode.js"></script>
