--- a/community/index_.html
+++ b/community/index_.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <title>Citation Network</title>
     <svg width="1000" height="800"></svg>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.24.0/d3-legend.min.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/mystyle_.css" />
   </head>
   <body>
